# src/app/routes/home/home.component.ts
@@ -1,12 +1,14 @@
-import { Component, OnInit } from '@angular/core';
+import { Component } from '@angular/core';
+import '@app/core/api';
 
 @Component({
   selector: 'app-home',
-  template: `
-    HOME
-  `,
-  styles: [],
+  templateUrl: './home.component.html',
 })
-export class HomeComponent implements OnInit {
-  public ngOnInit() {}
+export class HomeComponent {
+  public test() {
+    API.SortingDr.sortingParameter.GetAllValues.request({
+      pageIndex: 1,
+    }).then(() => {});
+  }
 }
